<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">
    <com.qianqi.mylook.view.TopTitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        app:tb_divider_visible="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/not_limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="23dp"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:ellipsize="end"
                        android:text="@string/not_limit"
                        android:textColor="#464646"
                        android:textSize="17sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:text="@string/not_limit_description"
                        android:textColor="#929292"
                        android:textSize="13sp"/>
                </LinearLayout>
                <ImageView
                    android:id="@+id/not_limit_selected"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="25dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_selected"
                    android:visibility="invisible"/>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="#a8a8a8"/>

            <LinearLayout
                android:id="@+id/smart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="23dp"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:ellipsize="end"
                        android:text="@string/smart_power_saving"
                        android:textColor="#464646"
                        android:textSize="17sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:text="@string/smart_description"
                        android:textColor="#929292"
                        android:textSize="13sp"/>
                </LinearLayout>
                <ImageView
                    android:id="@+id/smart_selected"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="25dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_selected"
                    android:visibility="visible"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="#a8a8a8"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
